Link style sheet, H1 tag, button, script tag.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JOKES</title>
   </head>
-  <body></body>
+  <body>
+    <h1>WOULD YOU LIKE A JOKE?</h1>
+    <div>
+      <button id="random" onclick="funcion()">YES! Tell me a joke.</button>
+    </div>
+    <footer>
+      <script src="script.js"></script>
+    </footer>
+  </body>
 </html>
