added div for joke container. Made const in JS for container. Added p tag to variable; joke container inner html equals variable.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <body>
     <h1>WOULD YOU LIKE A JOKE?</h1>
     <div>
-      <button id="random" onclick="funcion()">YES! Tell me a joke.</button>
+      <button id="random" onclick="randomJoke()">YES! Tell me a joke.</button>
     </div>
+    <div id="jokeContainer"></div>
     <footer>
       <script src="script.js"></script>
     </footer>
