added button for two part joke. When clicked joke container inner HTML will include setup and delivery.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <h1>WOULD YOU LIKE A JOKE?</h1>
     <div>
-      <button id="random" onclick="randomJoke()">YES! Tell me a joke.</button>
+      <button id="random" onclick="randomJoke()">
+        YES! Tell me a one liner
+      </button>
     </div>
     <div id="jokeContainer"></div>
     <footer>
