break and button tags for two part joke button.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <h1>WOULD YOU LIKE A JOKE?</h1>
     <div>
-      <button id="random" onclick="randomJoke()">
-        YES! Tell me a one liner
-      </button>
+      <button id="random" onclick="randomJoke()">YES! Tell me a one liner</button>
+    </br>
+    <button id="twoPart" onclick="twoPartJoke()">Give me a two part joke</button>
     </div>
     <div id="jokeContainer"></div>
     <footer>
